--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://your-backend.up.railway.app/$1"
+      "destination": "https://oarai-school-backend-production-513d.up.railway.app/$1"
     }
   ],
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://orai-school.vercel.app/" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Headers", "value": "Authorization, Content-Type" }
       ]
     }
